8260327: Shenandoah: Shenandoah may fail with -XX:UseSSE=0 on x86_32